syntax = "proto3";
option go_package = "./protos";

message Entity {
  uint32 inServerId = 1;
  float x = 2;
  float y = 3;
  uint32 animationIndex = 4;
  uint32 state = 5;
  uint32 direction = 6;
}

message Entities {
  repeated Entity entities = 1;
}

message Event {
  string eventType = 1;
  string eventData = 2;
}

message Message {
  repeated Entity entities = 1;
  repeated Event events = 2;
}

